--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "vue": "^3.5.13",
