--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "braintree-web-drop-in": "^1.43.0",
